# 2025-2-parallel-computing

./: .gitignore  README.md
lab/: .gitignore
lab/00/report/: report.tex
lab/00/src/: benchmark.py  matmul_O0  matmul_O3  result.md
lab/01/report/: report.tex
lab/01/src/: Makefile  benchmark.py  matmul.cpp  matmul.py  matmul_mpi
lab/02/: Makefile  benchmark.py
lab/02/report/: report.tex
lab/02/src/: matmul.cpp
lab/03/: CMakeLists.txt  benchmark.py
lab/03/report/: report.tex
lab/03/src/: array_sum_pthreads.cpp  matmul_pthreads.cpp
theory/01/: 01.typ
